created a sales functionality that can be sorted by year
